<?xml version="1.0"?>
<package format="3">
  <name>robo_base</name>
  <version>0.2.2</version>
  <description>ROBO_BASE - ROS 2 node for robo-dyne.com skid-steering vehicles</description>

  <maintainer email="info@robo-dyne.com">Rocco Galati</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://www.robo-dyne.com</url>
  <author email="roccogalati@gmail.com">Rocco Galati</author>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building the package -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>rosidl_default_generators</build_depend> -->

  <!-- Dependencies for running the package -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>robo_io</depend>
  <!-- Dependencies for messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependency -->
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Export tag for specifying additional information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
